[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/matchmaking_server/MatchmakingServer.gd" type="Script" id=1]

[node name="MatchmakingServer" type="Node"]
script = ExtResource( 1 )

[node name="FetchGameServers" type="HTTPRequest" parent="."]

[node name="FetchGameServerDetails" type="HTTPRequest" parent="."]
[connection signal="request_completed" from="FetchGameServers" to="." method="_on_FetchGameServers_request_completed"]
[connection signal="request_completed" from="FetchGameServerDetails" to="." method="_on_FetchGameServerDetails_request_completed"]
